# closestPointOnMesh

./: CMakeLists.txt
data/: pointQueries.txt
src/: ClosestPointQuery.cpp  ClosestPointQuery.h  Mesh.cpp  Mesh.h  Node.cpp  Node.h  main.cpp
